--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "check:experiments:mongodb": "cd ./experiments/mongodb && tsc --noEmit --skipLibCheck",
     "check:format": "./node_modules/.bin/prettier --ignore-path ./.cli.prettierignore --check '**/*.{js,json,ts,tsx}'",
     "test": "ts-node ./tests/helpers/setup-tests.ts && jest --verbose",
-    "test:integration": "ts-node ./tests/helpers/setup-tests.ts && env-cmd jest --watch --verbose --config ./jest.config.integration.ts",
-    "test:ci": "ts-node ./tests/helpers/setup-tests.ts && jest --coverage --verbose --runInBand && jest --coverage --verbose --runInBand --config ./jest.config.integration.ts",
+    "test:integration": "ts-node ./tests/helpers/setup-tests.ts && env-cmd jest --watch --verbose --config ./jest.config.integration.cjs",
+    "test:ci": "ts-node ./tests/helpers/setup-tests.ts && jest --coverage --verbose --runInBand && jest --coverage --verbose --runInBand --config ./jest.config.integration.cjs",
     "format": "./node_modules/.bin/prettier --ignore-path ./.cli.prettierignore --write '**/*.{js,json,ts,tsx}'",
     "benchmark-code": "node ./lib/benchmark-generation.js"
   },
