--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.8",
+    "@prisma/adapter-pg": "^7.2.0",
     "pg": "^8.12.0",
     "prettier": "^3.6.2",
     "prettier-2": "npm:prettier@^2",
